RESOLVED FIXED168388
Stop backing up localStorage databases to iCloud by default
https://bugs.webkit.org/show_bug.cgi?id=168388
Summary Stop backing up localStorage databases to iCloud by default
Brady Eidson
Reported 2017-02-15 13:08:12 PST
Stop backing up localStorage databases to iCloud by default <rdar://problem/29045531>
Attachments
Patch (27.86 KB, patch)
2017-02-15 13:13 PST, Brady Eidson
no flags
Patch (27.88 KB, patch)
2017-02-15 14:28 PST, Brady Eidson
ggaren: review+
commit-queue: commit-queue-
Brady Eidson
Comment 1 2017-02-15 13:13:25 PST
WebKit Commit Bot
Comment 2 2017-02-15 13:14:50 PST
Attachment 301644 [details] did not pass style-queue: ERROR: Source/WebKit/mac/Misc/WebKitVersionChecks.mm:29: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2017-02-15 13:25:56 PST
Comment on attachment 301644 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=301644&action=review We previously discussed making this change only for Safari, based on the concern that other clients might treat localStorage as permanent storage. Did you change your mind about that? If so, why? > Source/WebKit2/UIProcess/Storage/LocalStorageDatabaseTracker.cpp:218 > +#if PLATFORM(IOS) > + if (!m_hasExcludedFromBackup) { > + platformExcludeFromBackup(); > + m_hasExcludedFromBackup = true; > + } > +#endif Can we build this logic into the helper function?
Brady Eidson
Comment 4 2017-02-15 13:58:15 PST
\(In reply to comment #3) > Comment on attachment 301644 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=301644&action=review > > We previously discussed making this change only for Safari, based on the > concern that other clients might treat localStorage as permanent storage. > Did you change your mind about that? If so, why? Yup! If I ever successfully track you down in the office we can chat about it! > > > Source/WebKit2/UIProcess/Storage/LocalStorageDatabaseTracker.cpp:218 > > +#if PLATFORM(IOS) > > + if (!m_hasExcludedFromBackup) { > > + platformExcludeFromBackup(); > > + m_hasExcludedFromBackup = true; > > + } > > +#endif > > Can we build this logic into the helper function? Yah.
Brady Eidson
Comment 5 2017-02-15 14:28:23 PST
WebKit Commit Bot
Comment 6 2017-02-15 14:30:28 PST
Attachment 301659 [details] did not pass style-queue: ERROR: Source/WebKit/mac/Misc/WebKitVersionChecks.mm:29: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 7 2017-02-16 13:19:24 PST
Comment on attachment 301659 [details] Patch r=me
WebKit Commit Bot
Comment 8 2017-02-16 20:17:45 PST
Comment on attachment 301659 [details] Patch Rejecting attachment 301659 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 301659, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: .pbxproj Hunk #2 succeeded at 3098 (offset -1 lines). Hunk #3 succeeded at 4509 (offset -2 lines). Hunk #4 succeeded at 5775 (offset -3 lines). Hunk #5 succeeded at 9832 (offset -3 lines). Hunk #6 FAILED at 10005. Hunk #7 FAILED at 10196. 2 out of 7 hunks FAILED -- saving rejects to file Source/WebKit2/WebKit2.xcodeproj/project.pbxproj.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Geoffrey Garen']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/3141041
Brady Eidson
Comment 9 2017-02-17 10:50:44 PST
Note You need to log in before you can comment on or make changes to this bug.