Stop backing up localStorage databases to iCloud by default. <rdar://problem/29045531> and https://bugs.webkit.org/show_bug.cgi?id=168388

Reviewed by Geoffrey Garen.

Source/WebKit:

* WebKit.xcodeproj/project.pbxproj:

Source/WebKit/mac:

* Misc/WebKitVersionChecks.h:
* Misc/WebKitVersionChecks.mm: Renamed from Source/WebKit/mac/Misc/WebKitVersionChecks.m.
(WebKitLinkedOnOrAfter):
(setWebKitLinkTimeVersion):
(WebKitLinkTimeVersion):
(linkedOnOrAfter):

* Storage/WebStorageManager.mm:
(WebKitInitializeStorageIfNecessary):

Source/WebKit2:

* UIProcess/Cocoa/VersionChecks.h:

* UIProcess/Storage/LocalStorageDatabaseTracker.cpp:
(WebKit::LocalStorageDatabaseTracker::databasePath):
* UIProcess/Storage/LocalStorageDatabaseTracker.h:
* UIProcess/Storage/ios/LocalStorageDatabaseTrackerIOS.mm: Copied from Source/WebKit2/UIProcess/Cocoa/VersionChecks.h.
(WebKit::LocalStorageDatabaseTracker::platformExcludeFromBackup):

* WebKit2.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/185535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212555 268f45cc-cd09-0410-ab3c-d52691b4dbfc