Source/WebKit/mac/Storage/WebStorageManager.mm
@@ -26,6 +26,7 @@
 #import "WebStorageManagerInternal.h"
 
 #import "StorageTracker.h"
+#import "WebKitVersionChecks.h"
 #import "WebSecurityOriginInternal.h"
 #import "WebStorageNamespaceProvider.h"
 #import "WebStorageTrackerClient.h"
@@ -141,9 +142,15 @@ void WebKitInitializeStorageIfNecessary()
     static BOOL initialized = NO;
     if (initialized)
         return;
-    
-    WebKit::StorageTracker::initializeTracker([WebStorageManager _storageDirectoryPath], WebStorageTrackerClient::sharedWebStorageTrackerClient());
-        
+
+    auto *storagePath = [WebStorageManager _storageDirectoryPath];
+    WebKit::StorageTracker::initializeTracker(storagePath, WebStorageTrackerClient::sharedWebStorageTrackerClient());
+
+#if PLATFORM(IOS)
+    if (linkedOnOrAfter(SDKVersion::FirstToExcludeLocalStorageFromBackup))
+        [[NSURL fileURLWithPath:storagePath] setResourceValue:@YES forKey:NSURLIsExcludedFromBackupKey error:nil];
+#endif
+
     initialized = YES;
 }
 
