Source/WebKit2/UIProcess/Storage/ios/LocalStorageDatabaseTrackerIOS.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015-2017 Apple Inc. All rights reserved.
+ * Copyright (C) 2017 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -23,24 +23,26 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#pragma once
+#include "config.h"
+#include "LocalStorageDatabaseTracker.h"
 
-#import <wtf/spi/darwin/dyldSPI.h>
+#if PLATFORM(IOS)
+
+#include "VersionChecks.h"
 
 namespace WebKit {
 
-enum class SDKVersion : uint32_t {
-#if PLATFORM(IOS)
-    FirstWithNetworkCache = DYLD_IOS_VERSION_9_0,
-    FirstWithMediaTypesRequiringUserActionForPlayback = DYLD_IOS_VERSION_10_0,
-    FirstWithExceptionsForDuplicateCompletionHandlerCalls = DYLD_IOS_VERSION_11_0,
-    FirstToExcludeLocalStorageFromBackup = DYLD_IOS_VERSION_11_0,
-#elif PLATFORM(MAC)
-    FirstWithNetworkCache = DYLD_MACOSX_VERSION_10_11,
-    FirstWithExceptionsForDuplicateCompletionHandlerCalls = DYLD_MACOSX_VERSION_10_13,
-#endif
-};
+void LocalStorageDatabaseTracker::platformMaybeExcludeFromBackup() const
+{
+    if (m_hasExcludedFromBackup)
+        return;
 
-bool linkedOnOrAfter(SDKVersion);
+    m_hasExcludedFromBackup = true;
 
+    if (linkedOnOrAfter(SDKVersion::FirstToExcludeLocalStorageFromBackup))
+        [[NSURL fileURLWithPath:(NSString *)m_localStorageDirectory] setResourceValue:@YES forKey:NSURLIsExcludedFromBackupKey error:nil];
 }
+
+} // namespace WebKit
+
+#endif
